INSTALL(FILES routing_core.sql DESTINATION ${SQL_INSTALL_PATH} )
INSTALL(FILES routing_core_wrappers.sql DESTINATION ${SQL_INSTALL_PATH} )
INSTALL(FILES routing_topology.sql DESTINATION ${SQL_INSTALL_PATH} )
INSTALL(FILES matching.sql DESTINATION ${SQL_INSTALL_PATH} )
INSTALL(FILES uninstall_routing_core.sql DESTINATION ${SQL_INSTALL_PATH} )
INSTALL(FILES uninstall_routing_core_wrappers.sql DESTINATION ${SQL_INSTALL_PATH} )
INSTALL(FILES uninstall_routing_topology.sql DESTINATION ${SQL_INSTALL_PATH} )
INSTALL(FILES uninstall_matching.sql DESTINATION ${SQL_INSTALL_PATH} )
