ADD_LIBRARY(max_flow OBJECT
    max_flow.c
    minCostMaxFlow.c
    maximum_cardinality_matching.c
    edge_disjoint_paths.c

    max_flow_driver.cpp
    maximum_cardinality_matching_driver.cpp
    edge_disjoint_paths_driver.cpp
    minCostMaxFlow_driver.cpp

    maximumcardinalitymatching.cpp
    maxflow.cpp
    flowgraph.cpp
    minCostMaxFlow.cpp
    )
